demo: chunking and planning through troubleshooting and new features on a moderately complex project (#7)
* chore: init memory bank

* chore: prompt for troubleshooting

* chore: cline first hypothesis

* chore: prompt and response

* chore: revised plan

* chore: revise and iterate

* chore: chunking

* chore: impl of Phase A.1

* chore: explain about running types and test

* chore: implement chunk a.2

* chore: update context in the bank

* chore: complete and verify chunk a.3.

* chore: review and refine next steps

* chore: continue chunks implementation

* chore: reviewed users endpoints

* chore: agentic rollout of backend changes to spec and test

* chore: investigation review and update of memory

* chore: the model made a mistake here

* chore: cline reverts prevoius step

* feat: implement first step of frontend phase

* feat: implement login form link to signup

* fix: bug not refreshing page after successful login

* feat: implements posts integration with api

* fix: lint error
